# Quadro7lab_test

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
modules/: main.cpp
modules/emails/: CMakeLists.txt
modules/emails/include/emails/: emails.h
modules/emails/src/: emails.cpp
resources/: input.txt
tests/: CMakeLists.txt  test_emails.cpp
